June 16, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfOpenGL: Removed experimental dfOpenGL plugin.
 * configure.ac: OpenGL plugin is only built with --enable-opengl.
 * Makefile.am: Likewise.
 * debian/rules: Added --enable-opengl to configure parameters.
 * plugins/peopsxgl/draw.c: Don't enable OpenGL Extension by default, which
   may be unsupported or slow with some old cards.
 * plugins/peopsxgl/gpucfg/main.c: Likewise.

June 11, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/English.lproj/PCSX.nib/objects.nib: Added "Run ISO" function.
 * macosx/English.lproj/PCSX.nib/info.nib: Likewise.
 * macosx/English.lproj/PCSX.nib/classes.nib: Likewise.
 * macosx/PcsxController.h: Likewise.
 * macosx/PcsxController.m: Likewise.

June 10, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/plugins.c: Don't add "_" to function name for Mac OS X.
 * macosx/Info.plist: Modified software information.
 * macosx/English.lproj/InfoPlist.strings: Likewise.
 * macosx/Pcsx.xcodeproj/project.pbxproj: Tweaked parameter.
 * macosx/English.lproj/PCSX.nib/objects.nib: Removed Edit menu.
 * macosx/English.lproj/PCSX.nib/info.nib: Likewise.

June 9, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/*: Added preliminary Mac OS X port. Code copied from PCSX Mac
   Project (Still not working).

June 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * po/zh_CN.po, po/zh_TW.po: Don't use UTF-8.
 * debian/changelog: Bumped version.

June 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/interface.c: Tweaked UI.

June 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/Makefile.am: Added config utility.
 * plugins/peopsxgl/gpucfg/callbacks.c: Added.
 * plugins/peopsxgl/gpucfg/callbacks.h: Added.
 * plugins/peopsxgl/gpucfg/interface.c: Added.
 * plugins/peopsxgl/gpucfg/interface.h: Added.
 * plugins/peopsxgl/gpucfg/main.c: Added.
 * plugins/peopsxgl/gpucfg/support.c: Added.
 * plugins/peopsxgl/gpucfg/support.h: Added.